bin/testsuite/tests/compiler/src/errors/compiler4237.swg
#global testerror "Err0321"
using Swag

func toto(#[ConstExpr] str: string) {}

#test
{
    var x = "titi"
    toto(x)
}
